--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -2,6 +2,7 @@ pt-BR:
   activerecord:
     models:
       warehouse: "Galpão"
+      supplier: "Fornecedor"
     attributes:
       warehouse:
         name: "Nome"
@@ -11,3 +12,10 @@ pt-BR:
         address: "Endereço"
         cep: "CEP"
         area: "Área"
+      supplier:
+        brand_name: "Nome da marca"
+        corporate_name: "Razão social"
+        registration_number: "CNPJ"
+        city: "Cidade"
+        full_address: "Endereço completo"
+        state: "Estado"
