--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -3,6 +3,7 @@ pt-BR:
     models:
       warehouse: "Galpão"
       supplier: "Fornecedor"
+      product_model: "Modelo de Produto"
     attributes:
       warehouse:
         name: "Nome"
@@ -19,3 +20,11 @@ pt-BR:
         city: "Cidade"
         full_address: "Endereço completo"
         state: "Estado"
+      product_model:
+        name: "Nome"
+        weight: "Peso"
+        height: "Altura"
+        width: "Largura"
+        depth: "Profundidade"
+        sku: "SKU"
+        supplier_id: "Fornecedor"
