enh usability and display more information of supplier and warehouse product model

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -22,6 +22,7 @@ pt-BR:
         state: "Estado"
       product_model:
         name: "Nome"
+        dimension: "Dimensões"
         weight: "Peso"
         height: "Altura"
         width: "Largura"
